--- a/index.html
+++ b/index.html
@@ -553,15 +553,16 @@
                         </div>
                     </div>
                 </div>
-                <a class="lectureship-video" target="_blank" href="https://vimeo.com/734623709/26ad67db3a">
-                    <div class="container mb-5 m-auto pb-lg-5">
-                        <div class="row">
-                            <div class="col-12 text-center">
-                                <iframe class="lectureship-iframe" src="http://player.vimeo.com/video/734623709" width="100%" height="500 px" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-                            </div>
+                <div class="container mb-5 m-auto pb-lg-5">
+                    <div class="row">
+                        <div class="col-12 text-center">
+                            <a class="lectureship-video" target="_blank" href="https://vimeo.com/734623709/26ad67db3a">
+                                <!-- <iframe class="lectureship-iframe" src="http://player.vimeo.com/video/734623709" width="100%" height="500 px" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> -->
+                                <img class="img-fluid" src="images/video-ls.jpg" alt="Preview of ISF's congress video">
+                            </a>
                         </div>
                     </div>
-                </a>
+                </div>
                 
             </section>
 
