limit img width
Signed-off-by: P3L4 <silvanicolas93@gmail.com>

--- a/index.html
+++ b/index.html
@@ -542,14 +542,14 @@
                 <div class="container mb-5 m-auto pb-lg-5">
                     <div class="row">
                         <div class="col-12 text-center">
-                            <img class="img-fluid" src="images/LS2022-1.jpg" alt="World Congress on oils & fats and ISF Lectureship Series Banner">
+                            <img class="img-fluid img-content" src="images/LS2022-1.jpg" alt="World Congress on oils & fats and ISF Lectureship Series Banner">
                         </div>
                     </div>
                 </div>
                 <div class="container mb-5 m-auto pb-lg-5">
                     <div class="row">
                         <div class="col-12 text-center">
-                            <img class="img-fluid" src="images/LS2022-2.jpg" alt="Illustrative photos of the awarded conference">
+                            <img class="img-fluid img-content" src="images/LS2022-2.jpg" alt="Illustrative photos of the awarded conference">
                         </div>
                     </div>
                 </div>
@@ -635,7 +635,7 @@
                 <div class="container mb-5 m-auto pb-lg-5">
                     <div class="row">
                         <div class="col-12 text-center">
-                            <img class="img-fluid" src="images/constitution.jpg" alt="World Congress on oils & fats and ISF Lectureship Series Banner">
+                            <img class="img-fluid img-content" src="images/constitution.jpg" alt="World Congress on oils & fats and ISF Lectureship Series Banner">
                         </div>
                     </div>
                 </div>
