modificaciones en seccion lecture japan e imagenes
Signed-off-by: P3L4 <silvanicolas93@gmail.com>

--- a/index.html
+++ b/index.html
@@ -535,7 +535,10 @@
                 <div class="container mb-5 m-auto pb-lg-5">
                     <div class="row">
                         <div class="col-12 text-center">
-                            <h2 class="mb-3 fs-2 m-auto" data-aos="fade-up">Lectureship Series Japon 2022</h2>
+                            <h2 class="mb-3 fs-2 m-auto" data-aos="fade-up">ISF Lectureship Series Awards</h2>
+                        </div>
+                        <div class="col-12 mt-3 mb-lg-5">
+                            <p class="me-4" data-aos="fade-up" data-aos-delay="300"> Japan 2022 2nd World Congress on Oleo Science, Hosted WCOS2022  by JOCS (Japan Oil Chemists’ Society) ISF lecture Awards: 2022  Dr. Erick Decker Amherst MA, USA</p>
                         </div>
                     </div>
                 </div>
