--- a/index.html
+++ b/index.html
@@ -532,7 +532,64 @@
 
 
             <section class="section-padding pb-0" id="lecture">
-                <div class="container mb-5 m-auto pb-lg-5">
+
+
+                <div class="col-12">
+                    <h2 class="mb-lg-5 text-center" data-aos="fade-up">ISF Lectureship Series Awards</h2>
+                </div>
+
+                <div class="container">
+                    <div class="row mt-lg-5">
+                        <!-- <div class="col-12">
+                            <h3 class="mb-3 fs-5" data-aos="fade-up">
+                                Últimos premios:
+                            </h3>
+                        </div>
+                        <div class="col-12">
+                            <h2 class="mb-3 fs-5" data-aos="fade-up">Governed by two bodies:</h2>
+                        </div> -->
+
+                        <div class="col-lg-6 col-12 mt-3 mb-lg-5" data-aos="fade-up" data-aos-delay="200">
+                            <a href="https://vimeo.com/734623709/26ad67db3a" target="_blank">
+                                <img class="img-fluid" src="images/awardsisf/decker.png" alt="">
+                            </a>
+                        </div>
+
+                        <div class="col-lg-6 col-12 mt-3 mb-lg-5" data-aos="fade-up" data-aos-delay="200">
+                            <a href="https://asaga.org.ar/kaufmannMemorial/Cantrill.pdf" target="_blank">
+                                <img class="img-fluid" src="images/awardsisf/cantrill.png" alt="">
+                            </a>
+                        </div>
+
+                        <div class="col-lg-6 col-12 mt-3 mb-lg-5" data-aos="fade-up" data-aos-delay="200">
+                            <a href="https://asaga.org.ar/kaufmannMemorial/Miyashita.pdf" target="_blank">
+                                <img class="img-fluid" src="images/awardsisf/miyashita.png" alt="">
+                            </a>
+                        </div>
+
+                        <div class="col-lg-6 col-12 mt-3 mb-lg-5" data-aos="fade-up" data-aos-delay="200">
+                            <a href="https://asaga.org.ar/kaufmannMemorial/YueXin.pdf" target="_blank">
+                                <img class="img-fluid" src="images/awardsisf/yuexin.png" alt="">
+                            </a>
+                        </div>
+
+                        <div class="col-lg-6 col-12 mt-3 mb-lg-5" data-aos="fade-up" data-aos-delay="200">
+                            <a href="https://asaga.org.ar/kaufmannMemorial/MARANGONI.pdf" target="_blank">
+                                <img class="img-fluid" src="images/awardsisf/marangoni.png" alt="">
+                            </a>
+                        </div>
+
+
+
+
+                    </div>
+                </div>
+
+
+
+
+
+                <!-- <div class="container mb-5 m-auto pb-lg-5">
                     <div class="row">
                         <div class="col-12 text-center">
                             <h2 class="mb-3 fs-2 m-auto" data-aos="fade-up">ISF Lectureship Series Awards</h2>
@@ -560,12 +617,11 @@
                     <div class="row">
                         <div class="col-12 text-center">
                             <a class="lectureship-video" target="_blank" href="https://vimeo.com/734623709/26ad67db3a">
-                                <!-- <iframe class="lectureship-iframe" src="http://player.vimeo.com/video/734623709" width="100%" height="500 px" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> -->
                                 <img class="img-fluid" src="images/video-ls.jpg" alt="Preview of ISF's congress video">
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 
             </section>
 
