margin img lecture awards
Signed-off-by: P3L4 <silvanicolas93@gmail.com>

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                     <h2 class="mb-5 text-center" data-aos="fade-up">ISF Lecture Awards</h2>
                 </div>
 
-                <div class="container mb-5 pb-lg-5">
+                <div class="container mb-lg-5">
                     <div class="row">
                         <div class="col-12">
                             <h4 class="mb-3 fs-5" data-aos="fade-up">
@@ -534,11 +534,11 @@
             <section class="section-padding pb-0" id="lecture">
 
 
-                <div class="col-12">
+                <div class="col-12 mp-lg-5">
                     <h2 class="mb-lg-5 text-center" data-aos="fade-up">ISF Lectureship Series Awards</h2>
                 </div>
 
-                <div class="container">
+                <div class="container mt-lg-3 pt-lg-3">
                     <div class="row mt-lg-5">
                         <!-- <div class="col-12">
                             <h3 class="mb-3 fs-5" data-aos="fade-up">
@@ -632,7 +632,7 @@
 
 
 
-            <section class=" contact section-padding" id="contact">
+          <section class=" contact section-padding" id="contact">
                 <div class="container">
                     <div class="row">
                         
