--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700;900&display=swap"
       rel="stylesheet">
 
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/bootstrap-icons.css" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
@@ -27,7 +27,7 @@
 
     <link href="assets/css/templatemo-nomad-force.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="assets/css/customstyles.css">
+    <link rel="stylesheet" href="assets/css/customstyles.css"> -->
 
     <link rel="shortcut icon" href="assets/images/favicon.ico">
     <base href="/">
@@ -37,14 +37,14 @@
     <app-root></app-root>
 
     <!-- JAVASCRIPT FILES -->
-    <script src="assets/js/jquery.min.js"></script>
+    <!-- <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.sticky.js"></script>
     <script src="assets/js/aos.js"></script>
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/magnific-popup-options.js"></script>
     <script src="assets/js/scrollspy.min.js"></script>
     <script src="assets/js/custom.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script> -->
   </body>
 
 </html>
